For jdk 17+ needs to allow access to sun.security.util
TODO: upgrade to ApacheDS version compatible with jdk17